[gd_scene load_steps=43 format=3 uid="uid://bfahxvjjxjylq"]

[ext_resource type="Script" uid="uid://cbp023lkcpg5o" path="res://entities/dumby/dumby.gd" id="1_2ba6e"]
[ext_resource type="PackedScene" uid="uid://gs3fdbhnlc5o" path="res://CompositionStuff/Hurtbox/hurtbox_component.tscn" id="2_5wgoi"]
[ext_resource type="PackedScene" uid="uid://dydkhhqkwcgfw" path="res://CompositionStuff/Health/health_component.tscn" id="3_pin7m"]
[ext_resource type="Texture2D" uid="uid://baj53ina6l1vj" path="res://Art/planestuff/plane-Sheet.png" id="5_rxwle"]
[ext_resource type="Texture2D" uid="uid://b4qycvmecdv0m" path="res://Art/planestuff/Dumby Plane1.png" id="5_tl5jg"]
[ext_resource type="Script" uid="uid://co2v0nsq3wytj" path="res://entities/dumby/camera.gd" id="6_tddd6"]
[ext_resource type="AudioStream" uid="uid://dtq0aduiy7nn4" path="res://Audio/gunshot.wav" id="9_onvjk"]
[ext_resource type="AudioStream" uid="uid://c7ap66p2gfont" path="res://Audio/jetslash sfx/SFX/JetFlyLoop.wav" id="9_xd5q6"]
[ext_resource type="AudioStream" uid="uid://rfxisnyv0d1i" path="res://Audio/pistol-shot-233473.mp3" id="10_e8exh"]
[ext_resource type="Texture2D" uid="uid://c53xsnm74v5pd" path="res://Art/Stuff2/moon.png" id="12_8ylsd"]
[ext_resource type="AudioStream" uid="uid://bam7vrfyhev2j" path="res://Art/Placeholder/Roblox Explosion Sound Effect.wav" id="12_xik33"]
[ext_resource type="Texture2D" uid="uid://cb00doqsxr2ay" path="res://Art/Stuff2/shockwave-Sheet.png" id="13_6f8f5"]
[ext_resource type="AudioStream" uid="uid://oilja35cgsfb" path="res://Audio/hurt or laser.wav" id="13_pxqrg"]
[ext_resource type="Script" uid="uid://ctjumrbw2yuxo" path="res://GUI.gd" id="15_0uce1"]
[ext_resource type="AudioStream" uid="uid://dspg81m7f74v2" path="res://Audio/splashtownSFX/pickupCoin.wav" id="15_6bsw8"]
[ext_resource type="Texture2D" uid="uid://bdjhlycvkuwwo" path="res://Art/planestuff/Dumby Plane2.png" id="17_0bh43"]
[ext_resource type="PackedScene" uid="uid://hekqvagsvs2e" path="res://weapons/rapid/rapid.tscn" id="18_23fr6"]
[ext_resource type="Texture2D" uid="uid://bqubavsk5td7m" path="res://Art/newsprites.png" id="19_hu6rb"]
[ext_resource type="Script" uid="uid://0245wd4r0bun" path="res://entities/dumby/weapons_parent.gd" id="19_ufwy4"]
[ext_resource type="Texture2D" uid="uid://b2e50hn2busxu" path="res://Art/Stuff2/2d_lights_and_shadows_neutral_point_light.webp" id="20_hu6rb"]
[ext_resource type="PackedScene" uid="uid://bhygjgvm7og03" path="res://weapons/shotgun/shotgun.tscn" id="20_ubs6q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qmt67"]
size = Vector2(4, 4)

[sub_resource type="CircleShape2D" id="CircleShape2D_qxiag"]
radius = 3.0

[sub_resource type="Animation" id="Animation_2hs80"]
resource_name = "Ouch"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Plane:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(100, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Plane:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_mt2ih"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Plane:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Plane:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mgqv8"]
_data = {
&"Ouch": SubResource("Animation_2hs80"),
&"RESET": SubResource("Animation_mt2ih")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d4unw"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v6w3i"]
bg_color = Color(0.548963, 0.548963, 0.548963, 1)

[sub_resource type="Curve" id="Curve_tualj"]
_limits = [-360.0, 360.0, 0.0, 1.0]
_data = [Vector2(0, -304.615), 0.0, 0.0, 0, 0, Vector2(0.983146, 296.703), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="Animation_dq1xq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_kvjl2"]
resource_name = "flameLoop"
length = 0.3
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_75cqi"]
_data = {
&"RESET": SubResource("Animation_dq1xq"),
&"flameLoop": SubResource("Animation_kvjl2")
}

[sub_resource type="Animation" id="Animation_5fg7b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("newGun:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("newGun:pitch_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}

[sub_resource type="Animation" id="Animation_xyqg2"]
resource_name = "newgun"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%shoot:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%shoot2:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("newGun:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("newGun:pitch_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.3, 0.5, 0.7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wth8f"]
_data = {
&"RESET": SubResource("Animation_5fg7b"),
&"newgun": SubResource("Animation_xyqg2")
}

[sub_resource type="Animation" id="Animation_yoon2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shockwave-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Plane:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shockwave-sheet:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtboxComponent/hurbc:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Plane:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1duwf"]
resource_name = "die"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shockwave-sheet:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shockwave-sheet:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Plane:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtboxComponent/hurbc:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p1300"]
_data = {
&"RESET": SubResource("Animation_yoon2"),
&"die": SubResource("Animation_1duwf")
}

[sub_resource type="LabelSettings" id="LabelSettings_8y0g6"]
font_size = 25
font_color = Color(0, 0, 0, 1)
outline_size = 12

[sub_resource type="Animation" id="Animation_ufwy4"]
resource_name = "flash"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [8, 7, 6]
}

[sub_resource type="Animation" id="Animation_hu6rb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hu6rb"]
_data = {
&"RESET": SubResource("Animation_hu6rb"),
&"flash": SubResource("Animation_ufwy4")
}

[node name="dumby" type="CharacterBody2D"]
script = ExtResource("1_2ba6e")

[node name="c" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qmt67")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component", "ouchnim") instance=ExtResource("2_5wgoi")]
collision_layer = 4
collision_mask = 4
health_component = NodePath("../HealthComponent")
ouchnim = NodePath("Ouch")

[node name="hurbc" type="CollisionShape2D" parent="HurtboxComponent"]
rotation = 1.5708
shape = SubResource("CircleShape2D_qxiag")

[node name="Ouch" type="AnimationPlayer" parent="HurtboxComponent"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_mgqv8")
}

[node name="HealthComponent" parent="." node_paths=PackedStringArray("hp_bar") instance=ExtResource("3_pin7m")]
unique_name_in_owner = true
scale = Vector2(1.5, 1.5)
hp_bar = NodePath("hpbar")
hp_text = NodePath("")

[node name="hpbar" type="ProgressBar" parent="HealthComponent"]
offset_left = -27.0
offset_top = -28.3333
offset_bottom = -22.3333
scale = Vector2(2, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_d4unw")
theme_override_styles/fill = SubResource("StyleBoxFlat_v6w3i")
show_percentage = false

[node name="hptxt" type="Label" parent="HealthComponent/hpbar"]
visible = false
layout_mode = 0
offset_left = 10.3333
offset_top = -0.833336
offset_right = 50.3333
offset_bottom = 22.1667
scale = Vector2(0.3, 0.3)
text = "5/5"

[node name="Plane" type="Sprite2D" parent="."]
unique_name_in_owner = true

[node name="flameparticles" type="CPUParticles2D" parent="Plane"]
unique_name_in_owner = true
position = Vector2(-16, 0)
scale = Vector2(2, 2)
amount = 40
lifetime = 1.5
explosiveness = 0.1
direction = Vector2(0, 0)
spread = 20.0
gravity = Vector2(0, 10)
initial_velocity_max = 350.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angular_velocity_curve = SubResource("Curve_tualj")
scale_amount_min = 4.0
scale_amount_max = 5.0

[node name="trailparticle" type="CPUParticles2D" parent="Plane"]
unique_name_in_owner = true
position = Vector2(-16, 0)
scale = Vector2(1.2, 1.2)
amount = 40
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angular_velocity_curve = SubResource("Curve_tualj")
scale_amount_min = 4.0
scale_amount_max = 5.0

[node name="flamez" type="Sprite2D" parent="Plane"]
unique_name_in_owner = true
modulate = Color(100, 100, 100, 1)
position = Vector2(-15, -1.19209e-07)
texture = ExtResource("5_rxwle")
hframes = 4
frame = 1

[node name="flameLoop" type="AnimationPlayer" parent="Plane/flamez"]
libraries = {
&"": SubResource("AnimationLibrary_75cqi")
}
autoplay = "flameLoop"
speed_scale = 1.5

[node name="pud" type="Sprite2D" parent="Plane"]
rotation = 1.5708
scale = Vector2(1.2, 1.2)
texture = ExtResource("5_tl5jg")

[node name="plr" type="Sprite2D" parent="Plane"]
visible = false
texture = ExtResource("17_0bh43")

[node name="shoot_pos" type="Node2D" parent="Plane"]
unique_name_in_owner = true
position = Vector2(50, 0)

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("target")]
zoom = Vector2(0.7, 0.7)
position_smoothing_speed = 20.0
script = ExtResource("6_tddd6")
target = NodePath("..")

[node name="shootTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="sfx" type="Node2D" parent="."]

[node name="shoot" type="AudioStreamPlayer" parent="sfx"]
unique_name_in_owner = true
stream = ExtResource("9_onvjk")
volume_db = -10.0
bus = &"sfx"

[node name="shoot2" type="AudioStreamPlayer" parent="sfx"]
unique_name_in_owner = true
stream = ExtResource("10_e8exh")
volume_db = -15.0
pitch_scale = 0.5
bus = &"sfx"

[node name="shoot3" type="AudioStreamPlayer" parent="sfx"]
unique_name_in_owner = true
stream = ExtResource("13_pxqrg")
volume_db = -5.0
bus = &"sfx"

[node name="jet" type="AudioStreamPlayer" parent="sfx"]
unique_name_in_owner = true
stream = ExtResource("9_xd5q6")
bus = &"sfx"

[node name="explod" type="AudioStreamPlayer" parent="sfx"]
unique_name_in_owner = true
stream = ExtResource("12_xik33")
bus = &"sfx"

[node name="newGun" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource("15_6bsw8")
volume_db = -10.0
pitch_scale = 0.5
bus = &"sfx"

[node name="newgunim" type="AnimationPlayer" parent="sfx"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_wth8f")
}

[node name="Moon" type="Sprite2D" parent="."]
modulate = Color(0.525101, 0.525101, 0.525101, 0.667)
z_index = -1
scale = Vector2(0.4, 0.4)
texture = ExtResource("12_8ylsd")

[node name="death" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_p1300")
}

[node name="Shockwave-sheet" type="Sprite2D" parent="."]
visible = false
modulate = Color(100, 100, 100, 1)
scale = Vector2(2, 2)
texture = ExtResource("13_6f8f5")
hframes = 3
vframes = 3
frame = 1

[node name="GUI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("15_0uce1")

[node name="yLost" type="Control" parent="GUI"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -2.0
offset_right = 15.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="grey" type="Polygon2D" parent="GUI/yLost"]
position = Vector2(-695, -348)
color = Color(0.466667, 0.466667, 0.466667, 0.658824)
polygon = PackedVector2Array(-91, -95, -71, 813, 1402, 839, 1370, -139)

[node name="buttons" type="VBoxContainer" parent="GUI/yLost"]
layout_mode = 0
offset_left = -254.0
offset_top = -110.0
offset_right = -17.0
offset_bottom = -17.0
scale = Vector2(2, 2)

[node name="text" type="Label" parent="GUI/yLost/buttons"]
layout_mode = 2
size_flags_horizontal = 4
text = "Your Ship has Been Destroyed!"

[node name="play" type="Button" parent="GUI/yLost/buttons"]
visible = false
layout_mode = 2
focus_mode = 0
text = "Replay"

[node name="menu" type="Button" parent="GUI/yLost/buttons"]
layout_mode = 2
focus_mode = 0
text = "Menu"

[node name="paused" type="Control" parent="GUI"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -2.0
offset_right = 15.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="grey" type="Polygon2D" parent="GUI/paused"]
position = Vector2(-695, -348)
color = Color(0.466667, 0.466667, 0.466667, 0.658824)
polygon = PackedVector2Array(-91, -95, -71, 813, 1402, 839, 1370, -139)

[node name="buttons" type="VBoxContainer" parent="GUI/paused"]
layout_mode = 0
offset_left = -254.0
offset_top = -110.0
offset_right = -17.0
offset_bottom = -17.0
scale = Vector2(2, 2)

[node name="text" type="Label" parent="GUI/paused/buttons"]
layout_mode = 2
size_flags_horizontal = 4
text = "Game Paused"

[node name="resume" type="Button" parent="GUI/paused/buttons"]
layout_mode = 2
focus_mode = 0
text = "Resume"

[node name="titlescreen" type="Button" parent="GUI/paused/buttons"]
layout_mode = 2
focus_mode = 0
text = "Menu"

[node name="score" type="Label" parent="GUI"]
unique_name_in_owner = true
offset_left = 11.0
offset_top = 15.0
offset_right = 162.0
offset_bottom = 88.0
text = "Score:
10 billion"
label_settings = SubResource("LabelSettings_8y0g6")

[node name="2next" type="Label" parent="GUI"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 4.0
offset_right = -12.0
offset_bottom = 77.0
grow_horizontal = 0
text = "Kills till next gun:"
label_settings = SubResource("LabelSettings_8y0g6")

[node name="joystick" type="Node2D" parent="GUI"]
unique_name_in_owner = true
position = Vector2(114, 590)

[node name="bigcircle" type="Sprite2D" parent="GUI/joystick"]
modulate = Color(100, 100, 100, 1)
position = Vector2(85, -45)
scale = Vector2(2, 2)
texture = ExtResource("13_6f8f5")
hframes = 3
vframes = 3
frame = 6

[node name="weapons_parent" type="Node2D" parent="."]
script = ExtResource("19_ufwy4")

[node name="muzzle_flash" type="Sprite2D" parent="weapons_parent"]
visible = false
position = Vector2(35, 0)
texture = ExtResource("19_hu6rb")
hframes = 3
vframes = 3
frame = 7

[node name="flashnim" type="AnimationPlayer" parent="weapons_parent/muzzle_flash"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_hu6rb")
}

[node name="flash" type="PointLight2D" parent="weapons_parent/muzzle_flash"]
position = Vector2(10, 0)
color = Color(1, 0.70897, 0.147944, 1)
texture = ExtResource("20_hu6rb")
texture_scale = 0.4

[node name="rapid" parent="weapons_parent" instance=ExtResource("18_23fr6")]

[node name="shotgun" parent="weapons_parent" instance=ExtResource("20_ubs6q")]

[connection signal="timeout" from="shootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="NewGun" from="GUI" to="." method="_on_gui_new_gun"]
[connection signal="pressed" from="GUI/yLost/buttons/play" to="GUI" method="_on_play_pressed"]
[connection signal="pressed" from="GUI/yLost/buttons/menu" to="GUI" method="_on_menu_pressed"]
[connection signal="pressed" from="GUI/paused/buttons/resume" to="GUI" method="_on_resume_pressed"]
[connection signal="pressed" from="GUI/paused/buttons/titlescreen" to="GUI" method="_on_titlescreen_pressed"]
